backend/startup_output.txt
ERROR:
file:///E:/School_ERP_AI/erp-new-logic/backend/src/modules/auth/two-fa.service.js:4
import { authenticator } from 'otplib';
         ^^^^^^^^^^^^^
SyntaxError: The requested module 'otplib' does not provide an export named 'authenticator'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.17.0

STDOUT:

Message: Command failed: node src/server.js
file:///E:/School_ERP_AI/erp-new-logic/backend/src/modules/auth/two-fa.service.js:4
import { authenticator } from 'otplib';
         ^^^^^^^^^^^^^
SyntaxError: The requested module 'otplib' does not provide an export named 'authenticator'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:146:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:229:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.17.0
